<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrpt_libros_bridge</name>
  <!-- Before updating version number, read [MRPT_ROOT]/version_prefix.txt first -->
  <version>3.5.0</version>
  <description>Mobile Robot Programming Toolkit (MRPT) ros2bridge C++ library</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license>BSD</license>

  <url type="website">https://www.mrpt.org/</url>
  <url type="bugtracker">https://github.com/MRPT/mrpt/issues</url>

  <author email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</author>

  <!-- Deps required by user code (they are in public headers) -->
  <depend>mrpt_libobs</depend>
  <depend>mrpt_libmaps</depend>

  <!-- COMMON DEPS: This ensures we have ROS_DISTRO, etc. env vars -->
  <build_depend>ros_environment</build_depend>

  <build_depend>ament_cmake</build_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gps_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>

  <depend>rosbag2_cpp</depend> <!-- Optional -->

  <doc_depend>doxygen</doc_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->

</package>
